// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nx-plugin > should NOT add config targets dynamically if the project is configured 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [],
  "name": "my-lib",
  "projectType": "library",
  "root": "libs/my-lib",
  "sourceRoot": "libs/my-lib/src",
  "tags": [
    "scope:plugin",
  ],
  "targets": {
    "code-pushup": {
      "configurations": {},
      "executor": "@code-pushup/nx-plugin:autorun",
      "options": {},
    },
  },
}
`;

exports[`nx-plugin > should add configuration target dynamically 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [],
  "name": "my-lib",
  "projectType": "library",
  "root": "libs/my-lib",
  "sourceRoot": "libs/my-lib/src",
  "tags": [
    "scope:plugin",
  ],
  "targets": {
    "code-pushup--configuration": {
      "configurations": {},
      "executor": "nx:run-commands",
      "options": {
        "command": "nx g @code-pushup/nx-plugin:configuration --skipTarget --targetName="code-pushup" --project="my-lib"",
      },
    },
  },
}
`;

exports[`nx-plugin > should add executor target dynamically if the project is configured 1`] = `
{
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "implicitDependencies": [],
  "name": "my-lib",
  "projectType": "library",
  "root": "libs/my-lib",
  "sourceRoot": "libs/my-lib/src",
  "tags": [
    "scope:plugin",
  ],
  "targets": {
    "code-pushup": {
      "configurations": {},
      "executor": "@code-pushup/nx-plugin:autorun",
      "options": {},
    },
  },
}
`;

exports[`nx-plugin > should execute dynamic configuration target 1`] = `
"import type { CoreConfig } from '@code-pushup/models';

// see: https://github.com/code-pushup/cli/blob/main/packages/models/docs/models-reference.md#coreconfig
export default {
  plugins: [],
} satisfies CoreConfig;
"
`;
